# RM_AutoAim

./: README.md  yolov1_tutorial.ipynb
ArmorPNPSolver_cpp/: ArmorPNPSolver.cpp  ArmorPNPSolver.h
Camera_Calibration/: Camera_Calibration.py
armor_detection_py/: Armor_Detection.py  BasicDemo.py  README.md  cam.py  det.py  img_test.py  preprocess.py  video_test.py
opencv_test_cpp/: CMakeLists.txt  build.ps1  main.cpp
opencv_tutorial_py/opencv_tutorial-main/: armor.py  test01.py  test02.py
opencv_tutorial_py/opencv_tutorial-main/answer/: test00_hello.py  test02_color.py  test03_crop.py  test05_blur.py  test06_corner.py  test07_match.py  test08_gradient.py  test09_threshold.py  test10_morphology.py
